# cross-plat

./: .gitignore  Cargo.toml  README.md  config.example.toml  install.sh
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs  state.rs
src/crypto/: identity.rs  session.rs
src/input/: capture.rs  clipboard.rs  inject.rs  mod.rs
src/network/: dispatch.rs  gossip.rs  heartbeat.rs  mod.rs  peer.rs  protocol.rs  rotation.rs  router.rs
