[package]
name = "meshkvm"
version = "0.1.0"
edition = "2021"
description = "Secure P2P software KVM — mesh topology, Ed25519 auth, AES-256-GCM"

[[bin]]
name = "meshkvm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"

# Cryptography (all compatible with Rust 1.81+)
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm       = "0.10"
rand          = "0.8"
rand_core     = { version = "0.6", features = ["getrandom"] }
sha2          = "0.10"
hex           = "0.4"
zeroize       = { version = "1", features = ["derive"] }

# System
mac_address = "1.1"

# Input — cross-platform capture and injection
rdev  = "0.5"
enigo = "0.2"

# Clipboard

# Directory paths
dirs = "5"

# Logging / errors
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
thiserror          = "1"

[profile.release]
opt-level = 3
lto       = true
strip     = true
